--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@croct/plug-react",
+  "name": "@croct/plug-nextjs",
   "version": "0.0.0-dev",
   "description": "React components and hooks to plug your Next.js applications into Croct.",
   "author": {
@@ -29,17 +29,18 @@
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "test": "jest -c jest.config.js --coverage",
     "validate": "tsc --noEmit",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.json"
   },
   "peerDependencies": {
-    "next": "^13.0",
+    "next": "^13.0 || ^14.0",
     "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@croct/plug-react": "^0.6.4",
-    "@croct/sdk": "^0.14.0",
+    "@croct/plug": "file:/Users/marcospassos/WebstormProjects/plug-js/build/croct-plug-0.0.0-dev.tgz",
+    "@croct/plug-react": "file:/Users/marcospassos/WebstormProjects/plug-react/build/croct-plug-react-0.0.0-dev.tgz",
     "cookie": "^0.5.0",
+    "server-only": "^0.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -55,23 +56,28 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/set-cookie-parser": "^2.4.7",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "babel-loader": "^9.1.0",
     "eslint": "^8.28.0",
     "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.0.0",
-    "jest-environment-node": "^29.0.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-extended": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "set-cookie-parser": "^2.6.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.9.3",
+    "tsc-alias": "^1.8.8",
+    "typescript": "^5.4.5",
     "webpack": "^5.75.0"
   },
   "files": [
     "**/*.js",
     "**/*.ts",
+    "**/*.tsx",
     "**/*.map"
   ]
 }
