--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@croct/plug": "file:/Users/marcospassos/WebstormProjects/plug-js/build/croct-plug-0.0.0-dev.tgz",
     "@croct/plug-react": "file:/Users/marcospassos/WebstormProjects/plug-react/build/croct-plug-react-0.0.0-dev.tgz",
     "cookie": "^0.5.0",
-    "set-cookie-parser": "^2.6.0",
     "server-only": "^0.0.1",
     "uuid": "^9.0.1"
   },
@@ -64,15 +63,15 @@
     "babel-loader": "^9.1.0",
     "eslint": "^8.28.0",
     "jest": "^29.0.0",
-    "jest-environment-node": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-extended": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "set-cookie-parser": "^2.6.0",
     "ts-node": "^10.8.1",
     "tsc-alias": "^1.8.8",
-    "typescript": "^5.4.5",
-    "webpack": "^5.75.0"
+    "typescript": "^5.4.5"
   },
   "files": [
     "**/*.js",
