--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@croct/plug": "file:/Users/marcospassos/WebstormProjects/plug-js/build/croct-plug-0.0.0-dev.tgz",
-    "@croct/plug-react": "file:/Users/marcospassos/WebstormProjects/plug-react/build/croct-plug-react-0.0.0-dev.tgz",
+    "@croct/plug": "^0.14.0",
+    "@croct/plug-react": "^0.7.0",
+    "@croct/sdk": "^0.15.3",
     "cookie": "^0.5.0",
     "server-only": "^0.0.1",
     "uuid": "^9.0.1"
