--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "stripInternal": true,
   },
   "include": [
     "src/**/*.ts",
