--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "@croct/content": "^1.0.0",
     "@croct/plug": "^0.16.2",
     "@croct/plug-react": "^0.9.0",
     "@croct/sdk": "^0.17.4",
