--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "stripInternal": true,
+    "isolatedModules": true
   },
   "include": [
     "src/**/*.ts",
