--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "peerDependencies": {
     "next": "^13.0 || ^14.0",
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@croct/content": "^1.0.0",
@@ -42,8 +42,7 @@
     "@croct/plug-react": "^0.9.0",
     "@croct/sdk": "^0.17.4",
     "cookie": "^0.7.0",
-    "path-to-regexp": "^8.2.0",
-    "uuid": "^10.0.0"
+    "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
