--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.json"
   },
   "peerDependencies": {
-    "next": "^13.0 || ^14.0",
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
+    "next": "^13.0 || ^14.0 || ^15.0",
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@croct/plug": "^0.16.2",
-    "@croct/plug-react": "^0.9.0",
+    "@croct/plug-react": "https://pkg.pr.new/@croct/plug-react@520",
     "@croct/sdk": "^0.17.4",
+    "@vercel/functions": "^1.5.2",
     "cookie": "^0.7.0",
     "uuid": "^10.0.0"
   },
@@ -49,13 +50,13 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@croct/eslint-plugin": "^0.7.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.2.3",
     "@types/node": "^22.0.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/set-cookie-parser": "^2.4.7",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -66,8 +67,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-extended": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "set-cookie-parser": "^2.6.0",
     "ts-node": "^10.8.1",
     "tsc-alias": "^1.8.8",
