--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.json"
   },
   "peerDependencies": {
-    "next": "^13.0 || ^14.0 || ^15.0",
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
+    "next": "^^13.0.0-0 || ^14.0.0-0 || ^15.0.0-0",
+    "react": "^16.8.0-0  || ^17.0.0-0 || ^18.0.0-0 || ^19.0.0-0",
+    "react-dom": "^16.8.0-0  || ^17.0.0-0 || ^18.0.0-0 || ^19.0.0-0"
   },
   "dependencies": {
     "@croct/plug": "^0.16.2",
