--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "ES2020",
-    "target": "ESNext",
+    "target": "ES2020",
     "outDir": "build",
     "lib": ["dom"],
     "types": [
