--- a/package.json
+++ b/package.json
@@ -19,28 +19,35 @@
     "type": "git",
     "url": "git+https://github.com/croct-tech/plug-next.git"
   },
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "source": "./src/index.ts",
+  "type": "module",
+  "main": "./index.js",
+  "types": "./index.d.ts",
+  "exports": {
+    "./*": {
+      "import": "./*.js",
+      "require": "./*.cjs"
+    }
+  },
   "engines": {
     "node": ">=10"
   },
   "scripts": {
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
-    "test": "jest -c jest.config.js --coverage",
+    "test": "jest -c jest.config.mjs --coverage",
     "validate": "tsc --noEmit",
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.json"
+    "build": "tsup",
+    "postbuild": "./post-build.mjs"
   },
   "peerDependencies": {
-    "next": "^13.0 || ^14.0 || ^15.0",
-    "react": "^16.8  || ^17.0 || ^18.0 || ^19.0",
-    "react-dom": "^16.8  || ^17.0 || ^18.0 || ^19.0"
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.16.2",
-    "@croct/plug-react": "^0.10.0",
-    "@croct/sdk": "^0.17.4",
-    "@vercel/functions": "^1.5.2",
+    "@croct/plug": "^0.17.0",
+    "@croct/plug-react": "https://pkg.pr.new/@croct/plug-react@524",
+    "@croct/sdk": "^0.18.0",
+    "@vercel/functions": "^1.5.2 || ^2.0.0",
     "cookie": "^0.7.0",
     "path-to-regexp": "^6.3.0"
   },
@@ -62,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "babel-loader": "^10.0.0",
+    "esbuild-fix-imports-plugin": "^1.0.19",
     "eslint": "^8.57.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -72,12 +80,15 @@
     "set-cookie-parser": "^2.6.0",
     "ts-node": "^10.8.1",
     "tsc-alias": "^1.8.8",
+    "tsup": "^8.4.0",
     "typescript": "^5.4.5"
   },
   "files": [
     "**/*.js",
+    "**/*.cjs",
+    "**/*.mjs",
     "**/*.ts",
-    "**/*.tsx",
+    "**/*.cts",
     "**/*.map"
   ]
 }
