--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "postbuild": "./post-build.mjs"
   },
   "peerDependencies": {
-    "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@croct/plug": "^0.18.0",
-    "@croct/plug-react": "^0.12.0",
+    "@croct/plug-react": "^0.13.0",
     "@croct/sdk": "^0.18.0",
     "@vercel/functions": "^1.5.2 || ^2.0.0",
     "cookie": "^0.7.0",
