--- a/package.json
+++ b/package.json
@@ -43,6 +43,17 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": false
+    },
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    }
+  },
   "dependencies": {
     "@croct/plug": "^0.20.0",
     "@croct/plug-react": "^0.14.0",
@@ -52,6 +63,7 @@
     "path-to-regexp": "^6.3.0"
   },
   "devDependencies": {
+    "next": "^16.0.0",
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
